fix stray checkmarks, consistent opacity, and icon not showing up (#298400)
fix stray checkmarks, consistent opacity, and icon not showing up (#298346)

--- a/src/vs/workbench/contrib/chat/browser/widget/chatContentParts/media/chatConfirmationWidget.css
+++ b/src/vs/workbench/contrib/chat/browser/widget/chatContentParts/media/chatConfirmationWidget.css
@@ -104,6 +104,7 @@
 
 .chat-confirmation-widget-title small {
 	font-size: 1em;
+	opacity: 0.7;
 
 	&::before {
 		content: ' \2013  ';
